# fairanintsquare

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp  player.hpp
include/: animation.hpp  game.hpp  npc.hpp  player.hpp  resourceException.hpp  resource_exception.hpp  text.hpp  textureManager.hpp  texture_manager.hpp  tile.hpp  tiles.hpp  utilities.hpp
src/: CMakeLists.txt  animation.cpp  game.cpp  main.cpp  npc.cpp  player.cpp  resourceException.cpp  resource_exception.cpp  text.cpp  textureManager.cpp  texture_manager.cpp  tile.cpp  tiles.cpp
src/include/: animation.hpp  npc.hpp  player.hpp  resource_exception.hpp  text.hpp  texture_manager.hpp  tiles.hpp  utilities.hpp
